Fixes #82